[package]
name = "brontomc-agentrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
bollard = "0.17.1"
futures = "0.3.30"
futures-util = "0.3.30"
redb = "2.1.2"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
